<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rad121_monitor</name>
  <version>2.0.1</version>
  <description>A package used to detect and present radiation point heat sources using GM count detection, as well as create a heatmap using Gaussian processing.</description>
  <maintainer email="hello@turingnet.work">Brendon Cintas</maintainer>
  <license>ISC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-dev</depend>
  <depend>std_srvs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
